force-app/main/default/objects/Employee__c/fields/Approval_Status_for_Leave__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status_for_Leave__c</fullName>
    <label>Approval Status for Leave</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>