force-app/main/default/objects/Employee__c/fields/Employee_DOB__c.field-meta.xml
<CustomField>
    <fullName>Employee_DOB__c</fullName>
    <label>Employee DOB</label>
    <type>Date</type>
</CustomField>