force-app/main/default/objects/Employee__c/fields/Leave_days__c.field-meta.xml
<CustomField>
    <fullName>Leave_days__c</fullName>
    <label>Leave days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>