force-app/main/default/objects/Employee__c/fields/Max_Salary__c.field-meta.xml
<CustomField>
    <fullName>Max_Salary__c</fullName>
    <label>Max Salary</label>
    <summarizedField>Salary__c.Salary__c</summarizedField>
    <summaryForeignKey>Salary__c.Employee__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>