force-app/main/default/objects/Employee__c/fields/Min_Salary__c.field-meta.xml
<CustomField>
    <fullName>Min_Salary__c</fullName>
    <label>Min Salary</label>
    <summarizedField>Salary__c.Salary__c</summarizedField>
    <summaryForeignKey>Salary__c.Employee__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>