force-app/main/default/objects/Employee__c/fields/Shift_Time__c.field-meta.xml
<CustomField>
    <fullName>Shift_Time__c</fullName>
    <label>Shift Time</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Shift__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10:00 PM- 6:00 AM</fullName>
                <default>true</default>
                <label>10:00 PM- 6:00 AM</label>
            </value>
            <value>
                <fullName>9:00 AM- 5:00 PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>