force-app/main/default/objects/Employee__c/fields/Sum_of_Salary__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Salary__c</fullName>
    <label>Sum of Salary</label>
    <summarizedField>Salary__c.Salary__c</summarizedField>
    <summaryForeignKey>Salary__c.Employee__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>