force-app/main/default/objects/Employee__c/fields/Total_count_of_salary__c.field-meta.xml
<CustomField>
    <fullName>Total_count_of_salary__c</fullName>
    <label>Total count of salary</label>
    <summaryForeignKey>Salary__c.Employee__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>